<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:includeFontPadding="false"
        android:lineSpacingExtra="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/help_text_potencia_bomba" />

    <TextView
        android:id="@+id/save_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginEnd="51dp"
        android:text="@string/help_save_desc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/help_clear_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3"
        android:text="@string/help_load_desc"
        android:id="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginStart="10dp"
        android:src="@mipmap/ic_autorenew_black_24dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/textView3"
        android:src="@mipmap/ic_folder_black_24dp"
        android:id="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/save_desc"
        android:src="@mipmap/ic_save_black_24dp" />
</RelativeLayout>