<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/bombahpLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/Rlbl"
        android:src="@mipmap/ic_help_black_24dp" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/volver"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="POTENCIA REQUERIDA POR BOMBA"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/LPSedit"
        android:layout_below="@id/titulo"
        android:layout_marginTop="30dp"></Spinner>

    <TextView
        android:id="@+id/LPSlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/GPMlbl"
        android:layout_alignBottom="@+id/GPMlbl"
        android:layout_alignEnd="@+id/DAGUAedit"
        android:text="LPS"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/LPSedit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/titulo"
        android:layout_below="@+id/titulo"
        android:layout_marginTop="92dp"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/Mlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Medit"
        android:layout_alignBottom="@+id/Medit"
        android:layout_alignEnd="@+id/FTlbl"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/Medit"
        android:text="M"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/Medit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/LPSlbl"
        android:layout_alignBottom="@+id/LPSlbl"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/GPMlbl"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/GPMlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/GPMedit"
        android:layout_alignBottom="@+id/GPMedit"
        android:layout_alignStart="@+id/LPSlbl"
        android:text="GPM"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/GPMedit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/LPSedit"
        android:layout_alignBottom="@+id/LPSedit"
        android:layout_alignStart="@+id/spinner"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/FTlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/FTedit"
        android:layout_toEndOf="@+id/FTedit"
        android:layout_alignBaseline="@+id/FTedit"
        android:layout_marginStart="12dp"
        android:text="FT"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/FTedit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/GPMedit"
        android:layout_alignBottom="@+id/GPMedit"
        android:layout_alignStart="@+id/Medit"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/CDTlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CDTedit"
        android:layout_alignBottom="@+id/CDTedit"
        android:layout_alignStart="@+id/FTlbl"
        android:text="CDT"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/CDTedit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Qedit"
        android:layout_alignBottom="@+id/Qedit"
        android:layout_alignStart="@+id/FTedit"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/DAGUAlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DAGUAedit"
        android:layout_alignBottom="@+id/DAGUAedit"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/DAGUAedit"
        android:text="D. AGUA"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/DAGUAedit"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Qedit"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/Qedit"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/EFlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/EFedit"
        android:layout_alignBottom="@+id/EFedit"
        android:layout_alignEnd="@+id/DAGUAlbl"
        android:text="E. BOMBA"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/EFedit"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/DAGUAedit"
        android:layout_below="@+id/DAGUAedit"
        android:layout_marginTop="12dp"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Qlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Qedit"
        android:layout_alignBottom="@+id/Qedit"
        android:layout_alignStart="@+id/GPMlbl"
        android:text="Q"
        android:textColor="@color/colorAccent"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/Qedit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/GPMedit"
        android:layout_below="@+id/GPMedit"
        android:layout_marginTop="12dp"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Rlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Redit"
        android:layout_alignBottom="@+id/Redit"
        android:layout_toEndOf="@id/Redit"
        android:layout_marginStart="10dp"
        android:text="HP"
        android:textColor="@color/colorAccent"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/Redit"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_below="@+id/EFedit"
        android:layout_marginTop="13dp"
        android:editable="false"
        android:focusable="false"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Redit"
        android:backgroundTint="@android:color/transparent"
        android:src="@mipmap/ic_arrow_back_white_24dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Redit"
        android:layout_alignParentRight="true"
        android:tooltipText="@string/guardar_config"
        android:layout_marginEnd="20dp"
        android:src="@mipmap/ic_save_black_24dp"
        android:id="@+id/saveBtn" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Redit"
        android:tooltipText="@string/cargar_archivo"
        android:layout_toStartOf="@+id/saveBtn"
        android:layout_marginEnd="20dp"
        android:src="@mipmap/ic_folder_black_24dp"
        android:id="@+id/loadFile" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Redit"
        android:tooltipText="@string/limpiar_pantalla"
        android:layout_toStartOf="@+id/loadFile"
        android:layout_marginEnd="20dp"
        android:src="@mipmap/ic_autorenew_black_24dp"
        android:id="@+id/clearBtn" />



</RelativeLayout>
